--- a/layouts/partials/ref/category.html
+++ b/layouts/partials/ref/category.html
@@ -5,9 +5,9 @@
   {{ range $doc := $category.commands }}
   <li>
     {{ if (eq $doc.doc "credential-helpers") }}
-      <a href="doc/credential-helpers">
+      <a href="{{ relURL "doc/credential-helpers" }}">
     {{ else }}
-      <a href="{{ print "/docs/" $doc.doc (cond (and (ne $.Page.Params.lang nil) (ne $doc.no_append_lang true) (isset (index $.Site.Data.docs.pages $doc.doc) "languages") (isset (index $.Site.Data.docs.pages $doc.doc "languages") $.Page.Params.lang)) (print "/" $.Page.Params.lang) "") }}">
+      <a href="{{ relURL (print "docs/" $doc.doc (cond (and (ne $.Page.Params.lang nil) (ne $doc.no_append_lang true) (isset (index $.Site.Data.docs.pages $doc.doc) "languages") (isset (index $.Site.Data.docs.pages $doc.doc "languages") $.Page.Params.lang)) (print "/" $.Page.Params.lang) "")) }}">
     {{ end }}
       {{ if (eq $doc.title nil) }}
         {{ replace $doc.doc "git-" "" }}
