--- a/layouts/partials/ref/index.html
+++ b/layouts/partials/ref/index.html
@@ -10,7 +10,7 @@
     </p>
   </div>
   <div class="callout all-commands">
-    <a href="/docs/git#_git_commands">Complete list of all commands</a>
+    <a href="{{ relURL "docs/git#_git_commands" }}">Complete list of all commands</a>
   </div>
   <div class='reference-menu'>
     <div class='two-column'>
