appease rubocop Naming/PredicateName

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -35,7 +35,7 @@
     <div class="book-wrapper">
       <img  src="/images/books/pro-git@2x.jpg" width="118" height="157"/>
       <div>1st Edition (2009)</div>
-      <% if @book.has_edition(2) %>
+      <% if @book.edition?(2) %>
         <div class="switch"><a href="/book/<%= @book.code %>/v2">Switch to 2nd Edition</a></div>
       <% end %>
     </div>
