Convert the Windows downloads page to Hugo
This migrates the page from the Rails app to the static site generated
via Hugo.

We also need to move the server-side logic that is responsible for
adjusting the download link on 32-bit Windows to the client side, as
Javascript.

Note that we need to access the site parameters from that Javascript
code, therefore we need to move the `application.js` file from `static/`
to `assets/`. While at it, also minify it.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,4 +15,5 @@
 <script src="/js/jquery-ui-1.8.18.custom.min.js"></script>
 <script src="/js/jquery.defaultvalue.js"></script>
 <script src="/js/session.min.js"></script>
-<script src="/js/application.js"></script>
+{{ $js := resources.Get "js/application.js" | resources.ExecuteAsTemplate "js/application.js" . | resources.Minify }}
+<script src="{{ $js.RelPermalink }}"></script>
