--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -73,6 +73,15 @@
         <div id="content">
           {{ if (eq .Page.Path "/docs") }}
             {{ partial "ref/index.html" . }}
+          {{ else if isset .Params "video_title" }}
+            <div id="main">
+              <h1>{{ .Params.category }} Episode {{ .Params.episode }}</h1>
+              <h2>{{ .Params.video_title }}</h2>
+
+              <div id="video-container">
+                <iframe src="https://player.vimeo.com/video/{{ .Params.ext_id }}?title=0&amp;byline=0&amp;portrait=0&amp;color=f14e32" width="635" height="360" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+              </div>
+            </div>
           {{ else if eq $section "about" }}
             <div id="main">
               <h1 data-pagefind-meta="title">About{{ if (isset .Params "subtitle") }} - {{ .Params.subtitle }}{{ end }}</h1>
