--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -99,6 +99,18 @@
       </div>
       {{ partial "footer.html" . }}
     </div>
+  {{ else if (isset .Params "docname") }}
+    <div class="inner">
+      <div id="content-wrapper">
+        {{ partial "sidebar.html" . }}
+        <div id="content">
+          <div id="main" data-pagefind-body>
+            {{ .Content }}
+          </div>
+        </div>
+      </div>
+      {{ partial "footer.html" . }}
+    </div>
   {{ else }}
     <div class="inner">
       <div id="content-wrapper">
