Update GitHub link

--- a/app/views/doc/_ext_tutorials.erb
+++ b/app/views/doc/_ext_tutorials.erb
@@ -96,7 +96,7 @@
         </p>
       </li>
       <li>
-        <h4><a href="https://help.github.com/">Help.GitHub</a></h4>
+        <h4><a href="https://docs.github.com/">GitHub Docs</a></h4>
         <p class='description'>
           Guides on a variety of Git and GitHub related topics.
         </p>
