update-book2: show the chapter/section numbers in the titles
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -90,7 +90,7 @@
             </span>
           </div>
           <div id="main" data-pagefind-filter="category:book" data-pagefind-body class="book edition2">
-            <h1>{{ page.book.chapter.title }} - {{ page.book.section.title }}</h1>
+            <h1>{{ .Params.book.section.cs_number }} {{ .Params.book.chapter.title }} - {{ .Params.book.section.title }}</h1>
             <div>
               {{ .Content }}
             </div>
