--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -77,6 +77,9 @@
       <div id="content-wrapper">
         {{ partial "sidebar.html" . }}
         <div id="content">
+          {{ if isset .Params.book "front_page" }}
+            {{ partial "book-front-page.html" . }}
+          {{ else }}
           <div id="book-chapters">
             <a class="dropdown-trigger" id="book-chapters-trigger" data-panel-id="chapters-dropdown" href="#">Chapters ▾</a>
             <div class="dropdown-panel" id="chapters-dropdown">
@@ -95,6 +98,7 @@
               {{ .Content }}
             </div>
           </div>
+          {{ end }}
         </div>
       </div>
       {{ partial "footer.html" . }}
