--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -24,7 +24,7 @@ $base-font-family: Adelle, $base-font-family-fallback;
 $base-font-size:   14px;
 $base-line-height: 22px;
 
-$fixed-width-font-family: Courier, monospace;
+$fixed-width-font-family: monospace;
 $fixed-width-font-color: #4e443c;
 $fixed-width-line-height: 18px;
 
