address code review comments

--- a/app/views/doc/credential_helpers.html.erb
+++ b/app/views/doc/credential_helpers.html.erb
@@ -19,8 +19,7 @@
   <ul>
     <li>git-credential-wincred: included with Git for Windows.</li>
     <li>git-credential-osxkeychain: stores in macOS keychain.</li>
-    <li><a href="https://pkgs.org/search/?q=git-credential-libsecret">git-credential-libsecret</a>: stores in Linux secret service such as gnome-keyring or ksecret.</li>
-    <li><s>git-credential-gnome-keyring</s>: deprecated, replaced by git-credential-libsecret.</li>
+    <li><a href="https://pkgs.org/search/?q=git-credential-libsecret">git-credential-libsecret</a>: stores in Linux secret service such as GNOME Keyring or KDE Wallet.</li>
   </ul>
 
   <h2>OAuth</h2>
