--- a/app/views/doc/credential_helpers.html.erb
+++ b/app/views/doc/credential_helpers.html.erb
@@ -10,7 +10,7 @@
   <h2>Included in Git</h2>
 
   <ul>
-    <li><a href="https://git-scm.com/docs/git-credential-cache">git-credential-store</a>: saves credentials in plaintext.</li>
+    <li><a href="https://git-scm.com/docs/git-credential-store">git-credential-store</a>: saves credentials in plaintext.</li>
     <li><a href="https://git-scm.com/docs/git-credential-cache">git-credential-cache</a>: holds credentials temporarily in process memory. <a href="https://github.com/git-for-windows/git/issues/3892">Not available on Windows</a>. (NB. Since credentials are lost when the cache expires, this is inconvenient to store personal access tokens.)</li>
   </ul>
 
@@ -27,7 +27,7 @@
   <p>The following cross-platform helpers support authentication using OAuth. Initial authentication opens a browser window to the host. Subsequent authentication happens in the background.</p>
 
   <ul>
-    <li><a href="https://github.com/git-ecosystem/git-credential-manager">Git Credential Manager</a>: included with Git for Windows.</li>
+    <li><a href="https://github.com/git-ecosystem/git-credential-manager">Git Credential Manager</a>: included with Git for Windows. Supports multiple credential stores.</li>
     <li><a href="https://github.com/hickford/git-credential-oauth">git-credential-oauth</a>: included in many Linux distributions.</li>
   </ul>
 
@@ -35,7 +35,7 @@
   <ul>
     <li><a href="https://github.com/gopasspw/git-credential-gopass">git-credential-gopass</a>: stores in gopass password manager.</li>
     <li><a href="https://github.com/lastpass/lastpass-cli/blob/master/contrib/examples/git-credential-lastpass">git-credential-lastpass</a>: stores in lastpass password manager.</li>
-    <li><a href="https://github.com/develerik/git-credential-1password">git-credential-1password</a>: stores in 1password password manager.</li>
+    <li><a href="https://github.com/develerik/git-credential-1password">git-credential-1password</a>: stores in 1Password password manager.</li>
     <li><a href="https://github.com/Frederick888/git-credential-keepassxc">git-credential-keepassxc</a>: stores in KeePassXC password manager.</li>
   </ul>
 
