address code review comments

--- a/app/views/doc/credential_helpers.html.erb
+++ b/app/views/doc/credential_helpers.html.erb
@@ -11,15 +11,15 @@
 
   <ul>
     <li><a href="https://git-scm.com/docs/git-credential-store">git-credential-store</a>: saves credentials in plaintext.</li>
-    <li><a href="https://git-scm.com/docs/git-credential-cache">git-credential-cache</a>: holds credentials temporarily in process memory. <a href="https://github.com/git-for-windows/git/issues/3892">Not available on Windows</a>. (NB. Since credentials are lost when the cache expires, this is inconvenient to store personal access tokens.)</li>
+    <li><a href="https://git-scm.com/docs/git-credential-cache">git-credential-cache</a>: holds credentials temporarily in process memory. <a href="https://github.com/git-for-windows/git/issues/3892">Not available on Windows</a>. (Note that since credentials are lost when the cache expires or system restarts, this is inconvenient to store long-lived personal access tokens.)</li>
   </ul>
 
   <h2>Platform specific storage</h2>
   <p></p>
   <ul>
-    <li>git-credential-wincred: included with Git for Windows.</li>
-    <li>git-credential-osxkeychain: stores in macOS keychain.</li>
-    <li><a href="https://pkgs.org/search/?q=git-credential-libsecret">git-credential-libsecret</a>: stores in Linux secret service such as GNOME Keyring or KDE Wallet.</li>
+    <li>git-credential-osxkeychain: stores in <a href="https://support.apple.com/en-gb/guide/keychain-access/kyca1083/mac">macOS keychain</a>. Included in macOS Git installations.</li>
+    <li>git-credential-libsecret: stores in Linux secret service such as GNOME Keyring or KDE Wallet. <a href="https://pkgs.org/search/?q=git-credential-libsecret">Packaged in many Linux distributions</a>.</li>
+    <li>git-credential-wincred: stores in <a href="https://support.microsoft.com/en-us/windows/accessing-credential-manager-1b5c916a-6a16-889f-8581-fc16e8165ac0">Windows Credential Manager</a>. Included with Git for Windows.</li>
   </ul>
 
   <h2>OAuth</h2>
@@ -34,7 +34,7 @@
   <h2>Storage specific</h2>
   <ul>
     <li><a href="https://github.com/gopasspw/git-credential-gopass">git-credential-gopass</a>: stores in gopass password manager.</li>
-    <li><a href="https://github.com/lastpass/lastpass-cli/blob/master/contrib/examples/git-credential-lastpass">git-credential-lastpass</a>: stores in lastpass password manager.</li>
+    <li><a href="https://github.com/lastpass/lastpass-cli/blob/master/contrib/examples/git-credential-lastpass">git-credential-lastpass</a>: stores in LastPass password manager.</li>
     <li><a href="https://github.com/develerik/git-credential-1password">git-credential-1password</a>: stores in 1Password password manager.</li>
     <li><a href="https://github.com/Frederick888/git-credential-keepassxc">git-credential-keepassxc</a>: stores in KeePassXC password manager.</li>
   </ul>
