--- a/app/views/shared/ref/_setup.html.erb
+++ b/app/views/shared/ref/_setup.html.erb
@@ -4,4 +4,5 @@
   <li><%= man('git-config') %></li>
   <li><%= man('git-help') %></li>
   <li><%= man('git-bugreport') %></li>
+  <%= link_to "Credential helpers", "/doc/credential-helpers", sidebar_link_options("credential-helpers") %>
 </ul>
