link to git-credential-azure

--- a/app/views/doc/credential_helpers.html.erb
+++ b/app/views/doc/credential_helpers.html.erb
@@ -42,6 +42,7 @@
   <h2>Host specific</h2>
   <ul>
     <li><a href="https://github.com/netlify/netlify-credential-helper">git-credential-netlify</a>: authenticates to Netlify.</li>
+    <li><a href="https://github.com/hickford/git-credential-azure">git-credential-azure</a>: authenticates to Azure Repos.</li>
   </ul>
 
 </div>
