Make install directions more explicit to avoid confusing new users.

--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -13,6 +13,8 @@
   any non-source distributions are provided by third parties, and may
   not be up to date with the latest source release.</p>
 
+  <p><b>Choose one of the following options for installing Git on macOS:</b></p>
+
   <h3>Homebrew</h3>
   <p>Install <a href="https://brew.sh/">homebrew</a> if you don't already have it, then:<br>
   <code>$ brew install git</code></p>
