--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -110,7 +110,7 @@
 
           <!-- older manual page versions are less interesting and need to be excluded from the search -->
           {{ $include_in_search := (or (not (isset .Params "docname")) (isset .Params "latest-changes") (isset .Params "lang")) }}
-          <div id="main"{{ if $include_in_search }} data-pagefind-body{{ end }}>
+          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:reference" data-pagefind-body{{ end }}>
             {{ .Content }}
           </div>
         </div>
@@ -121,7 +121,7 @@
     <div class="inner">
       <div id="content-wrapper">
         {{ partial "sidebar.html" . }}
-        <div id="content" data-pagefind-body>
+        <div id="content" data-pagefind-filter="category:{{ $section }}" data-pagefind-body>
           {{ if (eq .Page.Path "/docs") }}
             {{ partial "ref/index.html" . }}
           {{ else if isset .Params "video_title" }}
