Add 'Boost Your Git DX' to ext book list

--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -117,6 +117,13 @@
           By Mariot Tsitoara
         </p>
       </li>
+      <li>
+        <a href="https://adamchainz.gumroad.com/l/bygdx"><img src="/images/books/boost-your-git-dx@2x.jpg"></a>
+        <h4><a href="https://adamchainz.gumroad.com/l/bygdx">Boost Your Git DX</a></h4>
+        <p class='description'>
+          By Adam Johnson
+        </p>
+      </li>
     </ul>
   </div>
 </div>
