Use Pagefind's UI for the full search
It is much nicer that way, as it offers filters and sorting and stuff.

This requires a bit of CSS to make the look & feel consistent with the
rest of the site.

Co-authored-by: Toon Claes <toon@iotcl.com>
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,6 +14,6 @@
 <script src="/js/jquery-1.7.1.min.js"></script>
 <script src="/js/jquery-ui-1.8.18.custom.min.js"></script>
 <script src="/js/jquery.defaultvalue.js"></script>
-<script src="/js/session.min.js"></script>
+{{ if eq (.Scratch.Get "section") "search" }}<script src="/pagefind/pagefind-ui.js"></script>{{ end }}
 {{ $js := resources.Get "js/application.js" | resources.ExecuteAsTemplate "js/application.js" . | resources.Minify }}
 <script src="{{ $js.RelPermalink }}"></script>
