Migrate the translated manual pages to the Hugo world
This imitates the commit that did the same for the English (i.e.
untranslated) manual pages.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -109,6 +109,8 @@
         {{ partial "sidebar.html" . }}
         <div id="content">
           <div id='reference-version'>
+            {{ partial "ref/languages.html" . }}
+            {{ partial "ref/topics.html" . }}
             {{ partial "ref/versions.html" . }}
           </div>
 
