--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -10,6 +10,13 @@
         </p>
       </li>
       <li>
+       <a href="https://www.amazon.com/Learning-Git-Hands-Visual-Basics/dp/1098133919/"><img src="https://learning.oreilly.com/covers/urn:orm:book:9781098133900/400w/"/></a>
+        <h4><a href="/book">Learning Git: A Hands-On and Visual Guide to the Basics of Git</a></h4>
+        <p class='description'>
+         By Anna Skoulikari
+        </p>
+      </li>
+      <li>
         <a href="https://www.packtpub.com/application-development/mastering-git"><img src="https://static.packt-cdn.com/products/9781783553754/cover/smaller"></a>
         <h4><a href="https://www.packtpub.com/application-development/mastering-git">Mastering Git</a></h4>
         <p class='description'>
