--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -88,7 +88,7 @@
               2nd Edition
             </span>
           </div>
-          <div id="main" data-pagefind-filter="category:book" data-pagefind-body class="book edition2">
+          <div id="main" data-pagefind-filter="category:book" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
             <h1>{{ .Params.book.section.cs_number }} {{ .Params.book.chapter.title }} - {{ .Params.book.section.title }}</h1>
             <div>
               {{ .Content }}
@@ -110,8 +110,15 @@
 
           <!-- older manual page versions are less interesting and need to be excluded from the search -->
           {{ $include_in_search := (or (not (isset .Params "docname")) (isset .Params "latest-changes") (isset .Params "lang")) }}
-          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:reference" data-pagefind-body{{ end }}>
+          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:reference" data-pagefind-weight="0.05" data-pagefind-body{{ end }}>
             {{ .Content }}
+            {{ $match := findRESubmatch "(?s)>NAME</h2>.*?<p[^>]*>(git-)?([^ ]+)" .Content 1 }}
+            {{ if (eq ($match | len) 1) }}
+              {{ $command_name := (index (index $match 0) 2) }}
+              {{ $weight := cond (strings.Contains $command_name "-") 7 10 }}
+              <!-- boost the command name in the search -->
+              <h3 hidden="true" data-pagefind-weight="{{ $weight }}">{{ $command_name }}</h3>
+            {{ end }}
           </div>
         </div>
       </div>
@@ -121,7 +128,7 @@
     <div class="inner">
       <div id="content-wrapper">
         {{ partial "sidebar.html" . }}
-        <div id="content" data-pagefind-filter="category:{{ $section }}" data-pagefind-body>
+        <div id="content" data-pagefind-filter="category:{{ $section }}" data-pagefind-weight="0.05" data-pagefind-body>
           {{ if (eq .Page.Path "/docs") }}
             {{ partial "ref/index.html" . }}
           {{ else if isset .Params "video_title" }}
