--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -88,7 +88,7 @@
               2nd Edition
             </span>
           </div>
-          <div id="main" data-pagefind-filter="category:book" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
+          <div id="main" data-pagefind-filter="category:book" data-pagefind-meta="category:Book" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
             <h1>{{ .Params.book.section.cs_number }} {{ .Params.book.chapter.title }} - {{ .Params.book.section.title }}</h1>
             <div>
               {{ .Content }}
@@ -110,7 +110,7 @@
 
           <!-- older manual page versions are less interesting and need to be excluded from the search -->
           {{ $include_in_search := (or (not (isset .Params "docname")) (isset .Params "latest-changes") (isset .Params "lang")) }}
-          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:reference" data-pagefind-weight="0.05" data-pagefind-body{{ end }}>
+          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:reference" data-pagefind-meta="category:Reference" data-pagefind-weight="0.05" data-pagefind-body{{ end }}>
             {{ .Content }}
             {{ $match := findRESubmatch "(?s)>NAME</h2>.*?<p[^>]*>(git-)?([^ ]+)" .Content 1 }}
             {{ if (eq ($match | len) 1) }}
