Add a link to a 250 question quiz on Git
This quiz tests your knowledge on topics such as basic Git commands, branching strategies, merging, conflict resolution, remote repositories, patches, submodules, work trees, subtrees, LFS, configuration, and collaborative development best practices.

--- a/app/views/doc/_ext_tutorials.erb
+++ b/app/views/doc/_ext_tutorials.erb
@@ -16,6 +16,12 @@
           A guided tour that walks through the fundamentals of Git.
         </p>
       </li>
+      <li>
+        <h4><a href="https://saravanansubramanian.com/git-quiz/">Git Comprehensive Quiz</a></h4>
+        <p class='description'>
+           A 250 question online quiz tests your knowledge on topics such as basic Git commands, branching strategies, merging, conflict resolution, remote repositories, patches, submodules, work trees, subtrees, LFS, configuration, and collaborative development best practices.
+        </p>
+      </li>
     </ul>
   </div>
   <div class='column-right'>
