--- a/app/assets/stylesheets/man-pages.scss
+++ b/app/assets/stylesheets/man-pages.scss
@@ -6,6 +6,7 @@
   p {
     em {
       font-family: $fixed-width-font-family !important;
+      font-variant-ligatures: none;
       font-style: normal;
       font-weight: bold;
       color: $fixed-width-font-color;
@@ -28,6 +29,7 @@
       display: block;
       padding: 2px;
       font-family: $fixed-width-font-family !important;
+      font-variant-ligatures: none;
       background-color: #eee0b5;
     }
     margin-bottom: 15px;
@@ -35,6 +37,7 @@
 
   dt.hdlist1 {
     font-family: $fixed-width-font-family !important;
+    font-variant-ligatures: none;
   }
 
   // Man pages
@@ -44,6 +47,7 @@
       margin-bottom: 1em;
       font-family: $fixed-width-font-family !important;
       line-height: $fixed-width-line-height;
+      font-variant-ligatures: none;
       color: $fixed-width-font-color;
       word-wrap: break-word;       /* Internet Explorer 5.5+ */
       white-space: pre;
