--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -258,6 +258,7 @@ code {
   overflow: auto;
   font-family: $fixed-width-font-family;
   line-height: $fixed-width-line-height;
+  font-variant-ligatures: none;
   color: $orange;
   background-color: #fff;
   border: solid 1px #efeee6;
@@ -364,6 +365,7 @@ div.more {
 
 .fixed {
   font-family: $fixed-width-font-family;
+  font-variant-ligatures: none;
 }
 
 .text-center {
