Add the tutorial Git for Data Science
The tutorial provides a basic introduction to Git, but also addresses specific issues in data science.

--- a/app/views/doc/_ext_tutorials.erb
+++ b/app/views/doc/_ext_tutorials.erb
@@ -79,6 +79,12 @@
           Build powerful and effective projects using Git Version Control Systems.
         </p>
       </li>      
+      <li>
+        <h4><a href="https://www.python4data.science/en/latest/productive/git/index.html">Git for Data Science</a></h4>
+        <p class='description'>
+          Best practices and typical Git workflows for data science.
+        </p>
+      </li>
     </ul>
   </div>
   <div class='column-right'>
