Add course Git for Data Science
Three-day Git course for data science

--- a/app/views/doc/_ext_courses.erb
+++ b/app/views/doc/_ext_courses.erb
@@ -8,6 +8,12 @@
           By Ferdinando Santacroce, Aske Olsson, Rasmus Voss and Jakub Narębski
         </p>
       </li>
+      <li>
+        <h4><a href="https://cusy.io/en/our-training-courses/versioned-and-reproducible-storage-of-code-and-data">Versioned and reproducible storage of code and data</a></h4>
+        <p class='description'>
+          Three-day course on Git in data science
+        </p>
+      </li>
     </ul>
   </div>
 </div>
