Move course to right column

--- a/app/views/doc/_ext_courses.erb
+++ b/app/views/doc/_ext_courses.erb
@@ -1,20 +1,24 @@
 <h2>Courses</h2>
 <div class='two-column'>
-  <div class='column-left'>
-    <ul class='course-list'>
-      <li>
-        <h4><a href="https://www.packtpub.com/application-development/git-mastering-version-control">Git: Mastering Version Control</a></h4>
-        <p class='description'>
-          By Ferdinando Santacroce, Aske Olsson, Rasmus Voss and Jakub Narębski
-        </p>
-      </li>
-      <li>
-        <h4><a href="https://cusy.io/en/our-training-courses/versioned-and-reproducible-storage-of-code-and-data">Versioned and reproducible storage of code and data</a></h4>
-        <p class='description'>
-          Three-day course on Git in data science
-        </p>
-      </li>
-    </ul>
-  </div>
+<div class='column-left'>
+<ul class='course-list'>
+  <li>
+    <h4><a href="https://www.packtpub.com/application-development/git-mastering-version-control">Git: Mastering Version Control</a></h4>
+    <p class='description'>
+      By Ferdinando Santacroce, Aske Olsson, Rasmus Voss and Jakub Narębski
+    </p>
+  </li>
+</ul>
+</div>
+<div class='column-right'>
+<ul class='course-list'>
+  <li>
+    <h4><a href="https://cusy.io/en/our-training-courses/versioned-and-reproducible-storage-of-code-and-data">Versioned and reproducible storage of code and data</a></h4>
+    <p class='description'>
+      Three-day course on Git in data science
+    </p>
+  </li>
+</ul>
+</div>
 </div>
 
