book: when navigating to another language, find the corresponding section
This addresses https://github.com/git/git-scm.com/issues/747.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -51,6 +51,20 @@
     </ul>
     {{ if (eq .Params.Sidebar "book") }}
       <hr class="sidebar">
+      {{- /* If this page displays a section of the ProGit book, map all the translations thereof */ -}}
+      {{ with $.Page.Params.book }}
+        {{ $cs_number := .section.cs_number }}
+        {{ range $.Page.Site.Data.book }}
+          {{ $language_code := .language_code }}
+          {{ range .chapters }}
+            {{ range .sections }}
+              {{ if (eq .cs_number $cs_number) }}
+                {{ $.Scratch.SetInMap "translations" $language_code .url }}
+              {{ end }}
+            {{ end }}
+          {{ end }}
+        {{ end }}
+      {{ end }}
       {{ partial "translations.html" . }}
     {{ else if (and (ne $section "documentation") (ne $section "site")) }}
       <hr class="sidebar">
