--- a/layouts/partials/translations.html
+++ b/layouts/partials/translations.html
@@ -1,49 +1,49 @@
 <p>
 This book is available in
-  <a href="{{ relURL "book/en" }}">English</a>.
+  <a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "en") }}">English</a>.
 </p>
 <p>
   Full translation available in
   <table>
-    <tr><td><a href="{{ relURL "book/az" }}">azərbaycan dili</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/bg" }}">български език</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/de" }}">Deutsch</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/es" }}">Español</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/fr" }}">Français</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/gr" }}">Ελληνικά</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/ja" }}">日本語</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/ko" }}">한국어</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/nl" }}">Nederlands</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/ru" }}">Русский</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/sl" }}">Slovenščina</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/tl" }}">Tagalog</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/uk" }}">Українська</a></td></tr>
-    <tr><td><a href="{{ relURL "book/zh" }}">简体中文</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "az") }}">azərbaycan dili</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "bg") }}">български език</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "de") }}">Deutsch</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "es") }}">Español</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "fr") }}">Français</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "gr") }}">Ελληνικά</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "ja") }}">日本語</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "ko") }}">한국어</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "nl") }}">Nederlands</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "ru") }}">Русский</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "sl") }}">Slovenščina</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "tl") }}">Tagalog</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "uk") }}">Українська</a></td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "zh") }}">简体中文</a>,</td></tr>
   </table>
 </p>
 <p>
   Partial translations available in
   <table>
-    <tr><td><a href="{{ relURL "book/cs" }}">Čeština</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/mk" }}">Македонски</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/pl" }}">Polski</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/sr" }}">Српски</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/uz" }}">Ўзбекча</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/zh-tw" }}">繁體中文</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "cs") }}">Čeština</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "mk") }}">Македонски</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "pl") }}">Polski</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "sr") }}">Српски</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "uz") }}">Ўзбекча</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "zh-tw") }}">繁體中文</a>,</td></tr>
   </table>
 </p>
 <p>
   Translations started for
   <table>
-    <tr><td><a href="{{ relURL "book/be" }}">Беларуская</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/fa" }}" dir="rtl">فارسی</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/id" }}">Indonesian</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/it" }}">Italiano</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/ms" }}">Bahasa Melayu</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/pt-br" }}">Português (Brasil)</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/pt-pt" }}">Português (Portugal)</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/sv" }}">Svenska</a>,</td></tr>
-    <tr><td><a href="{{ relURL "book/tr" }}">Türkçe</a>.</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "be") }}">Беларуская</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "fa") }}" dir="rtl">فارسی</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "id") }}">Indonesian</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "it") }}">Italiano</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "ms") }}">Bahasa Melayu</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "pt-br") }}">Português (Brasil)</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "pt-pt") }}">Português (Portugal)</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "sv") }}">Svenska</a>,</td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "tr") }}">Türkçe</a>.</td></tr>
   </table>
 </p>
 <hr class="sidebar"/>
