--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -51,7 +51,7 @@
     </ul>
     {{ if (eq .Params.Sidebar "book") }}
       <hr class="sidebar">
-      {{ partial "translations.html" }}
+      {{ partial "translations.html" . }}
     {{ else if (and (ne $section "documentation") (ne $section "site")) }}
       <hr class="sidebar">
       {{ partial "book.html" }}
