--- a/layouts/partials/translations.html
+++ b/layouts/partials/translations.html
@@ -48,6 +48,6 @@ This book is available in
 </p>
 <hr class="sidebar"/>
 <p>
-The source of this book is <a href="{{ .Page.book.repository_url }}">hosted on GitHub.</a></br>
+The source of this book is <a href="{{ (index (index .Site.Data.book .Page.Params.book.language_code) "repository_url") }}">hosted on GitHub.</a></br>
 Patches, suggestions and comments are welcome.
 </p>
