--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="noindex">
  </head>
  <body>
-  <script>window.location.replace(document.querySelector("link[rel='canonical']").href + window.location.hash)</script>
+  <script>window.location.replace(document.querySelector("link[rel='canonical']").href + window.location.search + window.location.hash)</script>
   <h1>Redirecting&hellip;</h1>
   <a href="{{ $redirect_to }}">Click here if you are not redirected.</a>
  </body>
