TO-DROP: do not minify the CSS, for easier fiddling
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -64,7 +64,7 @@
 
   <link href="{{ relURL "favicon.ico" }}" rel='shortcut icon' type='image/x-icon'>
 
-  {{ $style := resources.Get "sass/application.scss" | resources.ExecuteAsTemplate "application.scss" . | css.Sass | resources.Minify }}
+  {{ $style := resources.Get "sass/application.scss" | resources.ExecuteAsTemplate "application.scss" . | css.Sass }}
   <link rel="stylesheet" href="{{ $style.RelPermalink }}">
   <!--[if (gte IE 6)&(lte IE 8)]>
   <script src="{{ relURL "js/selectivizr-min.js" }}"></script>
