--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -27,6 +27,7 @@ $baseurl: "{{ .Site.BaseURL }}{{ if (and (ne .Site.BaseURL "/") (ne .Site.BaseUR
 @import 'book2';
 @import 'lists';
 @import 'about';
+@import 'dark-mode';
 
 code {
   display: inline;
@@ -49,31 +50,4 @@ pre {
 
 .d-flex{
   display: flex;
-}
-
-html {
-  --orange:                       #{$orange};
-  --orange-darker-5:              #{darken($orange, 5%)};
-  --blue:                         #{$blue};
-  --font-color:                   #{$font-color};
-  --aside-font-color:             #{lighten($font-color, 20%)};
-  --light-font-color:             #{$light-font-color};
-  --light-font-color-darker-10:   #{darken($light-font-color, 10%)};
-  --light-font-color-darker-25:   #{darken($light-font-color, 25%)};
-  --light-font-color-darker-35:   #{darken($light-font-color, 35%)};
-  --light-font-color-darker-55:   #{darken($light-font-color, 55%)};
-  --light-font-color-lighter-20:  #{lighten($light-font-color, 20%)};
-  --link-color:                   #{$link-color};
-  --link-hover-color:             #{lighten($link-color, 10%)};
-  --fixed-width-font-color:       #{$fixed-width-font-color};
-  --base-border-color:            #{$base-border-color};
-  --base-border-color-darker-8:   #{darken($base-border-color, 8%)};
-  --base-border-color-lighter-10: #{lighten($base-border-color, 10%)};
-  --callout-color:                #{$callout-color};
-  --highlight-bg-color:           #{$highlight-bg-color};
-
-  --black-3:                      #{$black-3};
-  --main-bg:                      #{$main-bg};
-  --button-bg-color:              #{$button-bg-color};
-  --button-bg-hover-color:        #{$button-bg-hover-color};
 }
