dark mode: dim images
As per the guidance provided in
https://css-tricks.com/a-complete-guide-to-dark-mode-on-the-web/#aa-dark-mode-images
wht this commit we tone down the images in dark mode, applying
techniques to filter background images as described in
https://css-tricks.com/apply-a-filter-to-a-background-image/.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -33,6 +33,37 @@
         $main-bg:                 #333333;
         $bg-color:                #2a2a2aff;
         $sidebar-bg-color:        #3d3d3a;
+
+        :root#{$theme} {
+            div#masthead {
+                background: transparent;
+            }
+            div#masthead::before {
+                content: "";
+                width: 100%;
+                height: 295px;
+                @include background-image-2x($baseurl + "images/bg/isometric-grid", 35px, 21px, top right, repeat);
+                position: absolute;
+                filter: brightness(.4) contrast(1.6);
+                z-index: -1;
+            }
+            img {
+                filter: brightness(.6) contrast(1.2);
+            }
+            // let the logo shine slightly brighter
+            img[alt="Git"] {
+                filter: brightness(0.9) contrast(1.5);
+            }
+
+            a.subtle-button {
+                background-image: linear-gradient(#555555, #777777);
+                border-top: solid 1px #333333;
+                border-right: solid 1px #333333;
+                border-bottom: solid 1px #333333;
+                border-left: solid 1px #333333;
+                @include box-shadow(none);
+            }
+        }
     }
 
     :root#{$theme} {
