dark mode: make links stand out visually a bit more
WCAG 2 AA (the standard for accessible websites) recommends a  minimum
color contrast of 3:1 for links, if color is the only discerning visual
marker.

In dark mode, that would be a bit too bright, so let's add a wavy
underline instead of increasing the color contrast of the links.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -63,6 +63,10 @@
                 border-left: solid 1px #333333;
                 @include box-shadow(none);
             }
+
+            a {
+                text-decoration: dashed 1px underline;
+            }
         }
     }
 
@@ -118,4 +122,5 @@
     &:hover {
         background-color: var(--button-bg-hover-color);
     }
+    text-decoration: none;
 }
