--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,5 +18,5 @@
 <script src="{{ relURL "js/modernizr.js" }}"></script>
 <script src="{{ relURL "js/modernize.js" }}"></script>
 {{ if eq (.Scratch.Get "section") "search" }}<script src="{{ relURL "pagefind/pagefind-ui.js" }}"></script>{{ end }}
-{{ $js := resources.Get "js/application.js" | resources.ExecuteAsTemplate "js/application.js" . | resources.Minify }}
+{{ $js := resources.Get "js/application.js" | resources.ExecuteAsTemplate "js/application.js" . }}
 <script src="{{ $js.RelPermalink }}"></script>
