Add a dark/light mode toggle
In the preceding commit, I added support for a dark mode, heeding the
operating system's indicated preference.

However, many users will want to be able to switch from/to dark/light
mode without switching the rest of their operating system.

Guided by the excellent advice provided in
https://css-tricks.com/a-complete-guide-to-dark-mode-on-the-web/ and in
https://dev.to/ayc0/light-dark-mode-avoid-flickering-on-reload-1567,
this commit introduces a button to toggle dark/light mode.

To avoid flickering, the idea is to:

- store the user preference in the local storage,

- using Javascript, in the `<head>` section of the HTML page (so that it
  is executed _before_ anything is displayed), heed that stored user
  preference (if any) by setting the `theme` attribute in the
  `document`'s `dataset`, and finally

- use that `theme` via CSS:

  :root[data-theme="dark"] {
    ...
  }

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -1,4 +1,4 @@
-@mixin mode($mode: light) {
+@mixin mode($mode: light, $theme: "") {
     // Palette
     $orange:                  #f14e32;
     $blue:                    #009099;
@@ -7,6 +7,8 @@
     $light-font-color:        #9a9994;
     $link-color:              #0388a6;
     $fixed-width-font-color:  #4e443c;
+    $button-bg-color:         rgba(223, 221, 213, 0.33);
+    $button-bg-hover-color:   rgba(250, 250, 250, 0.9);
     $base-border-color:       #d8d7cf;
     $callout-color:           #e9e8e0;
     $highlight-bg-color:      #eee0b5;
@@ -21,6 +23,7 @@
         $light-font-color:        #bdbbb0;
         $link-color:              #5facaf;
         $fixed-width-font-color:  #afa7a0;
+        $button-bg-hover-color:   rgba(223, 221, 213, 0.6);
         $base-border-color:       #b3b2a7;
         $callout-color:           #555555;
         $highlight-bg-color:      #7d724f;
@@ -28,7 +31,7 @@
         $main-bg:                 #333333;
     }
 
-    :root {
+    :root#{$theme} {
         --orange:                       #{$orange};
         --orange-darker-5:              #{darken($orange, 5%)};
         --blue:                         #{$blue};
@@ -43,6 +46,8 @@
         --link-color:                   #{$link-color};
         --link-hover-color:             #{lighten($link-color, 10%)};
         --fixed-width-font-color:       #{$fixed-width-font-color};
+        --button-bg-color:              #{$button-bg-color};
+        --button-bg-hover-color:        #{$button-bg-hover-color};
         --base-border-color:            #{$base-border-color};
         --base-border-color-darker-8:   #{darken($base-border-color, 8%)};
         --base-border-color-lighter-10: #{lighten($base-border-color, 10%)};
@@ -55,7 +60,25 @@
 }
 
 @include mode
+@include mode($mode: dark, $theme: '[data-theme="dark"]')
 
 @media screen and (prefers-color-scheme: dark) {
     @include mode($mode: dark)
+    @include mode($mode: light, $theme: '[data-theme="light"]')
+}
+
+#dark-mode-button {
+    display: none;
+    z-index: 10;
+    position: fixed;
+    right: 20px;
+    bottom: 2rem;
+    border-radius: 50px;
+    border: 2px solid transparent;
+    font-size: x-large;
+    padding: 10px 5px 10px 5px;
+    background-color: var(--button-bg-color);
+    &:hover {
+        background-color: var(--button-bg-hover-color);
+    }
 }
