--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,8 +42,20 @@
 {{ warnf "No section found in %s" (.Page.Path | jsonify) }}
 {{ end }}
 {{ .Scratch.Set "section" $section }}
-
 <head>
+  <script type="text/javascript">
+    // Check for stored user dark/light mode preference, if any
+    const currentTheme = localStorage.getItem("theme")
+    if (currentTheme) {
+      // Check dark mode preference at the OS level
+      const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)").matches
+      if ((prefersDarkScheme && currentTheme === "light")
+        || (!prefersDarkScheme && currentTheme === "dark")) {
+	document.documentElement.dataset.theme = currentTheme
+      }
+    }
+  </script>
+
   <meta charset='utf-8'>
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
