dark-mode: adapt verseblocks
The verse blocks of the manual pages are unlike any other visual
element, and therefore need special care to look good in dark mode.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -67,6 +67,11 @@
             a {
                 text-decoration: dashed 1px underline;
             }
+
+            #documentation #main div.verseblock pre.content {
+                color: var(--light-font-color);
+                background-color: #5e5951;
+            }
         }
     }
 
