book.scss: limit table styling only to .book class
book.scss should only style inside the .book class.

--- a/assets/sass/book.scss
+++ b/assets/sass/book.scss
@@ -106,7 +106,8 @@ ol.book-toc {
   padding: 5px;
 }
 
-.book table.ref th:nth-child(1), td:nth-child(1) {
+.book table.ref th:nth-child(1),
+.book td:nth-child(1) {
   width: 25%;
   padding: 5px;
 }
