dark-mode: use a not-too-dark color for navbar links
The links in the navigation bar are supposed to be colored dark gray
unless the current page is in the corresponding section.

In dark mode, however, it must be a bit lighter than the very dark
background.

So let's stop hard-coding that color and override it accordingly in dark
mode with a nice, pleasant light gray.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -6,6 +6,7 @@
     $aside-font-color:        lighten($font-color, 20%);
     $light-font-color:        #9a9994;
     $link-color:              #0388a6;
+    $nav-link-color:          #413932;
     $fixed-width-font-color:  #4e443c;
     $button-bg-color:         rgba(223, 221, 213, 0.33);
     $button-bg-hover-color:   rgba(250, 250, 250, 0.9);
@@ -24,6 +25,7 @@
         $aside-font-color:        darken($font-color, 10%);
         $light-font-color:        #bdbbb0;
         $link-color:              #5facaf;
+        $nav-link-color:          #979594;
         $fixed-width-font-color:  #afa7a0;
         $button-bg-hover-color:   rgba(223, 221, 213, 0.6);
         $base-border-color:       #b3b2a7;
@@ -100,6 +102,7 @@
         --light-font-color-darker-55:   #{darken($light-font-color, 55%)};
         --light-font-color-lighter-20:  #{lighten($light-font-color, 20%)};
         --link-color:                   #{$link-color};
+        --nav-link-color:               #{$nav-link-color};
         --link-hover-color:             #{lighten($link-color, 10%)};
         --fixed-width-font-color:       #{$fixed-width-font-color};
         --button-bg-color:              #{$button-bg-color};
