--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -142,7 +142,7 @@ aside nav ul {
     margin-bottom: 0.5em;
 
     a {
-      color: #413932;
+      color: var(--nav-link-color);
 
       &.active, &:hover {
         color: var(--orange);
