--- a/assets/sass/errors.scss
+++ b/assets/sass/errors.scss
@@ -6,7 +6,7 @@ body {
   line-height: $base-line-height;
   font-family: $base-font-family;
   color: var(--font-color);
-  background: #f0efe7 url($baseurl + "images/bg/body.jpg");
+  background: var(--bg-color);
 }
 
 // windows chrome makes a mess of Adelle web font
