dark-mode: decrease brightness of the ruler in the sidebar
It would stick out too much in dark mode otherwise.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -84,6 +84,10 @@
                 color: #dbd7d7;
             }
 
+            hr.sidebar {
+                filter: brightness(0.5);
+            }
+
             #documentation #main div.verseblock pre.content {
                 color: var(--light-font-color);
                 background-color: #5e5951;
