stylesheet: remove background and border from code spans
The new style makes the code spans lighter and more integrated into
the text. The new style also makes the code spans more readable and
less intrusive.

Signed-off-by: Jean-Noël Avila <jn.avila@free.fr>

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -29,7 +29,7 @@ $baseurl: "{{ .Site.BaseURL }}{{ if (and (ne .Site.BaseURL "/") (ne .Site.BaseUR
 
 code {
   display: inline;
-  padding: 0 5px;
+  padding: 0 0;
 }
 
 pre {
